	the standard and recommended packages by default.  Rather than
	keep R objects in memory, they are kept in a database on disc
	and only loaded on first use.  This accelerates startup (down
	to 40% of the time for 1.9.x) and reduces memory usage -- the
	latter is probably unimportant of itself, but reduces
	commensurately the time spent in garbage collection.

	Packages are by default installed using lazy loading if they 
	have more than 50kB of R code and did not use a saved image.
	This can be overridden by INSTALL --[no-]lazy or via a field
	in the DESCRIPTION file.  Note that as with --save, any other
	packages which are required must be already installed.

    o	All the datasets formerly in packages 'base' and 'stats' have
	been moved to a new package 'datasets'.  data() does the
	appropriate substitution, with a warning.  However, calls to
	data() are not normally needed as the data objects are visible
	in the 'datasets' package.

	Packages can be installed to make their data objects visible
	via R CMD INSTALL --lazy-data or via a field in the
	DESCRIPTION file.

    o   The semantics of data() have changed (and were incorrectly
	documented in recent releases) and the function has been moved
	to package 'utils'.  Please read the help page carefully if
	you use the 'package' or 'lib.loc' arguments.

	data() now lists datasets, and not just names which data() accepts.

    o   Dataset 'phones' has been renamed to 'WorldPhones'.

    o	Datasets 'sunspot.month' and 'sunspot.year' are available
        separately but not via data(sunspot) (which is used by package
        lattice to retrieve a dataset 'sunspot').

    o	Package names must now be given exactly in library() and
    	require(), regardless of whether the underlying file system is
    	case-sensitive or not.


NEW FEATURES

    o	There is a new atomic vector type, class "raw".	 See ?raw for
	full details including the operators and utility functions provided.
